# streakmaxxing

./: README.md  pyproject.toml
frontend/: index.html
streakmaxxing/: __init__.py  models.py  service.py
tests/: test_service.py
