[project]
name = "streakmaxxing"
version = "0.1.0"
description = "Simple streak management app logic"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["streakmaxxing"]

[tool.pytest.ini_options]
pythonpath = ["."]
